# CrossCraft-SurvivalTest

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MODDING.MD  README.md  SC-Cleanup.json  SC-Init.json  config.cfg
.circleci/: config.yml
.github/workflows/: crosscraft.yml
models/: creeper.yaml  pig.yaml  sheep.yaml  sheep_fur.yaml  skeleton.yaml  spider.yaml  steve.yaml
resourcepacks/default/: name.txt  pack.txt
resourcepacks/default/assets/minecraft/textures/: LICENSE.txt
src/: BlockConst.hpp  Config.hpp  Controls.hpp  GameStateControls.cpp  Gamestate.cpp  Gamestate.hpp  Main.cpp  MusicManager.cpp  MusicManager.hpp  Option.hpp  ResourcePackManager.cpp  ResourcePackManager.hpp  TexturePackManager.cpp  TexturePackManager.hpp  Utils.hpp
src/Chunk/: ChunkMesh.cpp  ChunkMesh.hpp  ChunkMeshBuilder.cpp  ChunkMeshBuilder.hpp  ChunkStack.cpp  ChunkStack.hpp  ChunkUtil.hpp
src/Entity/: Arrow.cpp  Arrow.hpp  DropLookup.hpp  Drops.cpp  Drops.hpp  Entity.cpp  Entity.hpp  TNT.cpp  TNT.hpp
src/MP/: Client.cpp  Client.hpp  InPackets.cpp  InPackets.hpp  OutPackets.cpp  OutPackets.hpp
src/Menu/: Menustate.cpp  Menustate.hpp
src/Mob/: AggressiveMob.cpp  AggressiveMob.hpp  ArmorData.hpp  CreeperData.cpp  CreeperData.hpp  Mob.cpp  Mob.hpp  MobData.hpp  MobManager.cpp  MobManager.hpp  PassiveMob.cpp  PassiveMob.hpp  PigData.hpp  SheepData.hpp  SkeletonData.cpp  SkeletonData.hpp  SpiderData.hpp  SteveData.hpp  ZombieData.hpp
src/Modding/: Mod.cpp  Mod.hpp
src/Model/: Armor.cpp  Armor.hpp  ArmorModel.hpp  Creeper.cpp  Creeper.hpp  CreeperModel.hpp  Model.cpp  Model.hpp  Pig.cpp  Pig.hpp  PigModel.hpp  Sheep.cpp  Sheep.hpp  SheepModel.hpp  Skeleton.cpp  Skeleton.hpp  SkeletonModel.hpp  Spider.cpp  Spider.hpp  SpiderModel.hpp  Steve.cpp  Steve.hpp  SteveModel.hpp  Zombie.cpp  Zombie.hpp  ZombieModel.hpp
src/Player/: AABB.hpp  BlockRep.cpp  BlockRep.hpp  Chat.cpp  Chat.hpp  DropLookup.hpp  Drops.cpp  Drops.hpp  Entity.cpp  Entity.hpp  PauseMenu.cpp  PauseMenu.hpp  Player.cpp  Player.hpp  PlayerInput.cpp
src/Sound/: SoundManager.cpp  SoundManager.hpp
src/UI/: TextHelper.cpp  TextHelper.hpp  UserInterface.cpp  UserInterface.hpp
src/World/: BreakParticles.cpp  BreakParticles.hpp  Clouds.cpp  Clouds.hpp  DigAction.cpp  DigAction.hpp  Particles.cpp  Particles.hpp  PlaceAction.cpp  PlaceAction.hpp  SaveData.cpp  SaveData.hpp  SelectionBox.cpp  SelectionBox.hpp  World.cpp  World.hpp
src/World/Generation/: ClassicGenerator.cpp  ClassicGenerator.hpp  CrossCraftGenerator.cpp  CrossCraftGenerator.hpp  NoiseUtil.cpp  NoiseUtil.hpp  WorldGenUtil.cpp  WorldGenUtil.hpp
src/World/Particles/: BreakParticles.cpp  BreakParticles.hpp  DeathParticles.cpp  DeathParticles.hpp  ParticleManager.cpp  ParticleManager.hpp  WeatherParticles.cpp  WeatherParticles.hpp
